# shinsei

./: .gitignore  README.md  build_mingw.sh  build_msys2.cmd
src/: CMakeLists.txt
src/cmake/: shinseiConfig.cmake.in
src/ex/: CMakeLists.txt
src/ex/python3/: CMakeLists.txt
src/ex/python3/gil/: CMakeLists.txt  gil.c
src/ex/python3/struct/: CMakeLists.txt  struct-windows.c  struct.c
src/include/shinsei/: io.h  path.h  shinsei-ex.h  shinsei-minimal.h  shinsei.h  str.h  struct.h  sys.h  version.h  version.hpp
src/include/shinsei/.internal/: os.h  std.h  tag.hpp  usage.h
src/include/shinsei/ex/: python3.h
src/include/shinsei/ex/python3/: gil.h  git.hpp  struct.h  struct.hpp
src/include/shinsei/minimal/: io.h  path.h  str.h  struct.h  sys.h
src/io/: CMakeLists.txt  io-windows.c  io.c
src/path/: CMakeLists.txt  path-windows.c  path.c
src/str/: CMakeLists.txt  str-windows.c  str.c
src/struct/: CMakeLists.txt  struct-linux.c  struct.c
src/sys/: CMakeLists.txt  sys-windows.c  sys.c
